--- a/cidr2021/keynotespeakers.html
+++ b/cidr2021/keynotespeakers.html
@@ -123,7 +123,7 @@ Olukotun, Stanford University</span></p>
 line-height:115%'>Title:</span></b></p>
 
 <p class=MsoNormal style='margin-bottom:0in'><span style='font-size:11.5pt;
-line-height:115%;color:#333333'>TBA</span></p>
+line-height:115%;color:#333333'>Let the Data Flow!</span></p>
 
 <p class=MsoNormal style='margin-bottom:0in'><b><span style='font-size:16.0pt;
 line-height:115%;color:black'>&nbsp;</span></b></p>
@@ -131,13 +131,21 @@ line-height:115%;color:black'>&nbsp;</span></b></p>
 <p class=MsoNormal style='margin-bottom:0in'><b><span style='font-size:16.0pt;
 line-height:115%;color:black'>Abstract:</span></b></p>
 
-<p class=MsoNormal><span style='font-size:11.5pt;line-height:115%;color:#333333'>TBA</span></p>
+<p style="padding: 20px">
+As the benefits from Moore’s Law diminish, future computing performance improvements 
+will rely on specialized application accelerators. To justify the expense of designing  
+an accelerator it  should accelerate an important set of application areas. In this talk, 
+we explain how Reconfigurable Dataflow Accelerators (RDAs) can be used to accelerate a 
+broad set of data analytic applications. RDAs are a reconfigurable computing substrate 
+designed to accelerate Machine Learning (ML) by efficiently executing  the hierarchical 
+dataflow that exists in many ML applications and models. Powered by RDAs, SambaNova’s 
+DataScale systems are achieving world-record performance on a number of challenging ML applications. RDAs can also accelerate database applications by using dataflow for stream record processing. Finally, stream record processing can be used to support a new threading model called Dataflow threads. Dataflow threads enable high-performance irregular control and data flow that is required for efficient computation on trees, graphs, and hash tables.
+</p>
 
 <p class=MsoNormal style='margin-bottom:0in'><b><span style='font-size:16.0pt;
 line-height:115%;color:black'>Bio:</span></b></p>
 
-<p class=MsoNormal style='margin-bottom:0in;line-height:normal'><span
-style='color:black'>Biography: Kunle Olukotun is the Cadence Design Professor
+<p style="padding: 20px">Kunle Olukotun is the Cadence Design Professor
 of Electrical Engineering and Computer Science at Stanford University. Olukotun
 is well known as a pioneer in multicore processor design and the leader of the
 Stanford Hydra chip multipocessor (CMP) research project. Olukotun founded
@@ -152,7 +160,7 @@ infrastructure for usable machine learning. Olukotun is a co-founder of
 SambaNova Systems. Olukotun is an ACM Fellow and IEEE Fellow for contributions
 to multiprocessors on a chip and multi-threaded processor design and is the
 recipient of the 2018 IEEE Harry H. Goode Memorial Award. Olukotun received his
-Ph.D. in Computer Engineering from The University of Michigan.</span></p>
+Ph.D. in Computer Engineering from The University of Michigan.</p>
 
 <p class=MsoNormal style='margin-bottom:0in;line-height:normal'><span
 style='font-size:12.0pt;font-family:"Times New Roman",serif'>&nbsp;</span></p>
