--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ CIDR
   none;border-bottom:solid windowtext .5pt;border-right:solid windowtext .5pt;
   mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
   padding:0in 5.4pt 0in 5.4pt'>
- <p class=MsoNormal><a href="cidr2021/cfp.html">CfP</a></p></td>
+ <p class=MsoNormal><a href="cidr2021/cidr2021proceedings.zip">2021 Proceedings ( .zip)</a></p></td>
   <td width=148 valign=top style='width:2.05in;border-top:none;border-left:
   none;border-bottom:solid windowtext .5pt;border-right:solid windowtext .5pt;
   mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
