--- a/cidr2021/officers.html
+++ b/cidr2021/officers.html
@@ -111,7 +111,7 @@
 <li><b>Carsten Binnig</b>, TU Darmstadt</li>
 <li><b>Matthias Boehm</b>, TU Graz</li>
 <li><b>Philippe Bonnet</b>, IT Univ Copenhagen, Denmark</li>
-<li><b>Ugur Cetintemel</b>, Brown Michigan</li>
+<li><b>Ugur Cetintemel</b>, Brown University</li>
 <li><b>Shimin Chen</b>, Chinese Academy of Sciences</li>
 <li><b>Jens Dittrich</b>, Saarland University</li>
 <li><b>Aaron Elmore</b>, Chicago University </li>
