--- a/cidr2021/program.html
+++ b/cidr2021/program.html
@@ -140,7 +140,7 @@
          <span class="session-time">9:30 - 9:45</span>
 		<span class="session-talk"><a class = "link" href="papers/cidr2021_paper09.pdf">Leam: An Interactive System for In-situ Visual Text Analysis
 </a></span>
-        <span class="session-presenter">Sajjadur Rahman (Megagon Labs)*; Peter Griggs (MIT- CSAIL); Çağatay Demiralp (Megagon Labs)
+        <span class="session-presenter">Sajjadur Rahman (Megagon Labs)*; Peter Griggs (MIT- CSAIL); Çağatay Demiralp (Sigma Computing)
 </span>
 
 
