--- a/cidr2021/program.html
+++ b/cidr2021/program.html
@@ -245,7 +245,7 @@ TBA</a></span>
     </div>
     <h3 class="time-slot" style="grid-row: time-0800;">8:00am PST</h3>
     <div class="session session-8 track-1" style="grid-column: track-1; grid-row: time-0800 / time-0900;">
-        <h3 class="session-title"><a href="gongshow2020/gongshow.html">Gong Show</a></h3>
+        <h3 class="session-title"><a href="gongshow.html">Gong Show</a></h3>
         <span class="session-location">Location: Zoom</span>
         <span class="session-presenter"> Chair: Andy Pavlo (CMU)</span>
     </div>
