--- a/cidr2021/program.html
+++ b/cidr2021/program.html
@@ -100,7 +100,7 @@
         <span class="session-location">Location: Zoom</span>
         <span class="session-time">8:00 - 8:15</span>
 		<span class="session-talk"><a class = "link" href="papers/cidr2021_paper04.pdf">chainifyDB: How to get rid of your Blockchain and use your DBMS instead</a></span>
-        <span class="session-presenter">Felix M Schuhknecht (Saarland University)*; Ankur Sharma (Saarland University); Jens Dittrich (Saarland University); Divya Agrawal (University of Saarland)
+        <span class="session-presenter">Felix M Schuhknecht (Johannes Gutenberg-University Mainz)*; Ankur Sharma (Saarland University); Jens Dittrich (Saarland University); Divya Agrawal (University of Saarland)
 </span>
         
          <span class="session-time">8:15 - 8:30</span>
