updated keynotes added benoit

--- a/cidr2021/keynotespeakers.html
+++ b/cidr2021/keynotespeakers.html
@@ -64,8 +64,8 @@
 	<div id="contentwide"> 
 	  
           
-	 <h3>CIDR 2021 Keynote Speakers: TBA</h3>
-<!--	 
+	 <h3>CIDR 2021 Keynote Speakers:</h3>
+	 
 	 <h2 id='tuesday'><span style='font-family:"Calibri",sans-serif'>Tuesday Keynote: 9:00 am
 -10:00 am</span></h2>
 
@@ -73,8 +73,8 @@
 border:none windowtext 1.0pt;padding:0in'><img width=129 height=129
 id="Picture 2" src="Keynote_speakers_content.fld/image001.jpg"></span></p>
 
-<p class=MsoNormal><span style='font-size:16.0pt;line-height:115%'>Benoit Dageville, Co-Founder &amp; President of
-Product</span></p>
+<p class=MsoNormal><span style='font-size:16.0pt;line-height:115%'>Benoit Dageville, Snowflake Co-Founder &amp; President of
+Products</span></p>
 <p class=MsoNormal><span style='font-size:11.5pt;line-height:115%;color:#333333'>&nbsp;</span></p>
 
 
@@ -91,8 +91,7 @@ style='color:black'><br>
 <br>
 </span></p>
 
-<p class=MsoNormal style='margin-bottom:0in;line-height:normal'><span
-style='color:black'>Benoit co-founded Snowflake and currently serves as
+<p style="padding: 20px">Benoit co-founded Snowflake and currently serves as
 President of the Product division. Benoit is a leading expert in parallel
 execution and self-tuning database systems. Prior to founding Snowflake, Benoit
 was with Oracle for over 10 years as a lead architect for parallel execution in
@@ -100,8 +99,8 @@ Oracle RAC and a key architect in the SQL Manageability group. Prior to Oracle,
 Benoit worked at Bull Information Systems. He helped define the architecture
 and lead database performance efforts for Bull’s parallel systems. Benoit has a
 PhD in Computer Science with a focus in Parallel Database Systems and is a
-named inventor on more than 80 patents.</span></p>
--->
+named inventor on more than 80 patents.</p>
+
 <p class=MsoNormal style='margin-bottom:0in;line-height:normal'>&nbsp;</p>
 
 <h2><span style='font-family:"Calibri",sans-serif'>&nbsp;</span></h2>
