a bunch of updates

--- a/cidr2021/keynotespeakers.html
+++ b/cidr2021/keynotespeakers.html
@@ -79,19 +79,32 @@ Products</span></p>
 
 
 <p class=MsoNormal style='margin-bottom:0in;line-height:normal'><b><span
-style='font-size:16.0pt'>Title:</span></b><span style='color:black'><br>
-TBA<br>
-<br>
-</span><b><span style='font-size:16.0pt;color:black'>Abstract:</span></b><span
-style='color:black'><br>
-TBA<br>
-<br>
-</span><b><span style='font-size:16.0pt;color:black'>Bio:</span></b><span
-style='color:black'><br>
+style='font-size:16.0pt'>Title:
+Snowflake Data Cloud<br></b>
 <br>
 </span></p>
 
-<p style="padding: 20px">Benoit co-founded Snowflake and currently serves as
+<b><span style='font-size:16.0pt;color:black'>Abstract:</span></b><span
+style='color:black'><br>
+The Snowflake Data Cloud is a new type of cloud dedicated to data analytics, built on top 
+of the infrastructure provided by the three major cloud providers, namely Amazon, Microsoft
+ and Google. In this talk, we will give an overview of the Snowflake cloud data platform, 
+ highlighting how we leverage cloud to make Snowflake infinitely scalable, elastic, global, 
+ collaborative and finally extremely simple to use. In particular, we will show that this 
+ is made possible by our multi-cluster shared-data architecture. This novel architecture, 
+ specifically designed for cloud, allows unlimited and independent scaling of both compute 
+ and storage, with instant elasticity along both dimensions. The Snowflake cloud data platform 
+ is globally distributed making it one single multi-tenant platform for the world. This enables 
+ collaboration between tenants, for example allowing one tenant, here a provider, to share a 
+ secure view of a database with one or more tenants, referred to as consumers. Our multi-cluster 
+ shared-data architecture enables live data sharing without the need to share any compute 
+ resources, resulting in full isolation between providers and consumers.<br>
+<br>
+
+</span>
+<b><span style='font-size:16.0pt;color:black'>Bio:</span></b><span
+style='color:black'><br>
+Benoit co-founded Snowflake and currently serves as
 President of the Product division. Benoit is a leading expert in parallel
 execution and self-tuning database systems. Prior to founding Snowflake, Benoit
 was with Oracle for over 10 years as a lead architect for parallel execution in
@@ -99,7 +112,7 @@ Oracle RAC and a key architect in the SQL Manageability group. Prior to Oracle,
 Benoit worked at Bull Information Systems. He helped define the architecture
 and lead database performance efforts for Bull’s parallel systems. Benoit has a
 PhD in Computer Science with a focus in Parallel Database Systems and is a
-named inventor on more than 80 patents.</p>
+named inventor on more than 80 patents.<br>
 
 <p class=MsoNormal style='margin-bottom:0in;line-height:normal'>&nbsp;</p>
 
@@ -118,19 +131,14 @@ Olukotun, Stanford University</span></p>
 
 <p class=MsoNormal><span style='font-size:11.5pt;line-height:115%;color:#333333'>&nbsp;</span></p>
 
-<p class=MsoNormal style='margin-bottom:0in'><b><span style='font-size:16.0pt;
-line-height:115%'>Title:</span></b></p>
-
-<p class=MsoNormal style='margin-bottom:0in'><span style='font-size:11.5pt;
-line-height:115%;color:#333333'>Let the Data Flow!</span></p>
+<p class=MsoNormal style='margin-bottom:0in;line-height:normal'><b><span
+style='font-size:16.0pt'>Title: Let the Data Flow!</span> </b></p>
 
 <p class=MsoNormal style='margin-bottom:0in'><b><span style='font-size:16.0pt;
 line-height:115%;color:black'>&nbsp;</span></b></p>
 
-<p class=MsoNormal style='margin-bottom:0in'><b><span style='font-size:16.0pt;
-line-height:115%;color:black'>Abstract:</span></b></p>
-
-<p style="padding: 20px">
+<b><span style='font-size:16.0pt;color:black'>Abstract:</span></b><span
+style='color:black'><br>
 As the benefits from Moore’s Law diminish, future computing performance improvements 
 will rely on specialized application accelerators. To justify the expense of designing  
 an accelerator it  should accelerate an important set of application areas. In this talk, 
@@ -139,12 +147,13 @@ broad set of data analytic applications. RDAs are a reconfigurable computing sub
 designed to accelerate Machine Learning (ML) by efficiently executing  the hierarchical 
 dataflow that exists in many ML applications and models. Powered by RDAs, SambaNova’s 
 DataScale systems are achieving world-record performance on a number of challenging ML applications. RDAs can also accelerate database applications by using dataflow for stream record processing. Finally, stream record processing can be used to support a new threading model called Dataflow threads. Dataflow threads enable high-performance irregular control and data flow that is required for efficient computation on trees, graphs, and hash tables.
-</p>
+</br>
 
-<p class=MsoNormal style='margin-bottom:0in'><b><span style='font-size:16.0pt;
-line-height:115%;color:black'>Bio:</span></b></p>
+<br>
 
-<p style="padding: 20px">Kunle Olukotun is the Cadence Design Professor
+
+<b><span style='font-size:16.0pt;color:black'>Bio:</span></b><span
+style='color:black'><br>Kunle Olukotun is the Cadence Design Professor
 of Electrical Engineering and Computer Science at Stanford University. Olukotun
 is well known as a pioneer in multicore processor design and the leader of the
 Stanford Hydra chip multipocessor (CMP) research project. Olukotun founded
@@ -159,7 +168,7 @@ infrastructure for usable machine learning. Olukotun is a co-founder of
 SambaNova Systems. Olukotun is an ACM Fellow and IEEE Fellow for contributions
 to multiprocessors on a chip and multi-threaded processor design and is the
 recipient of the 2018 IEEE Harry H. Goode Memorial Award. Olukotun received his
-Ph.D. in Computer Engineering from The University of Michigan.</p>
+Ph.D. in Computer Engineering from The University of Michigan.</br>
 
 <p class=MsoNormal style='margin-bottom:0in;line-height:normal'><span
 style='font-size:12.0pt;font-family:"Times New Roman",serif'>&nbsp;</span></p>
