--- a/cidr2021/program.html
+++ b/cidr2021/program.html
@@ -208,7 +208,7 @@
         <span class="session-location">Location: Zoom</span>
         <span class="session-time">9:00 - 10:00</span>
 		<span class="session-talk"><a class = "link" href="keynotespeakers.html#tuesday">
-TBA</a></span>
+Snowflake Data Cloud</a></span>
         <span class="keynote-presenter"><a class = "link" href="keynotespeakers.html#tuesday">Benoit Dageville, Snowflake</a></span>
 
 
