--- a/cidr2021/index.html
+++ b/cidr2021/index.html
@@ -129,7 +129,7 @@ document.write('</div>');
 </div>
 <p>
 		  	<p>
-		The CIDR program consists of single-track keynote, paper and demo presentations. There are also evening sessions, including a lively gong show, and plenty of time for interaction among the delegates, who are researchers and practitioners from both academia and industry. CIDR encourages papers about innovative and risky data management system architecture ideas, systems-building experience and insight, resourceful experimental studies, and provocative position statements. Papers are encouraged to present novel approaches to data systems architecture and usage, to inspire discussions on the latest innovative and visionary ideas in the field. Authors are encouraged to submit their best systems work, and are limited to submit at most two papers.
+		The CIDR program consists of single-track keynote, paper and demo presentations. CIDR encourages papers about innovative and risky data management system architecture ideas, systems-building experience and insight, resourceful experimental studies, and provocative position statements. Papers are encouraged to present novel approaches to data systems architecture and usage, to inspire discussions on the latest innovative and visionary ideas in the field. Authors are encouraged to submit their best systems work, and are limited to submit at most two papers.
 
 				  
 		<p>
