--- a/cidr2021/org.html
+++ b/cidr2021/org.html
@@ -104,6 +104,10 @@ For the period 2020-2025, we are grateful that the following sponsors are suppor
 <p>
 <a href="https://www.snowflake.com">
 <img  height="130" id="snowflake" src="img/snowflake.png" ></a>
+
+<p>
+<a href="https://www.sap.com">
+<img  height="130" id="sap" src="img/sap.png" ></a>
 	
 	
 	</div>
