--- a/cidr2021/program.html
+++ b/cidr2021/program.html
@@ -359,8 +359,16 @@ Snowflake Data Cloud</a></span>
     <h3 class="time-slot" style="grid-row: time-0900;">9:00am PST</h3>
     <div class="session session-15 track-1" style="grid-column: track-1; grid-row: time-0900 / time-1000;">
         <h3 class="session-title"><a href="gongshow2020/gongshow.html">Panel</a></h3>
-        <span class="session-talk"><a class = "link" href="papers/p29-neumann-cidr20.pdf">ML in Databases</a></span>
-        <span class="keynote-presenter"> TBA</span>
+        <span class="session-talk"><a class = "link" href="#">ML in Databases</a></span>
+            <span class="session-presenter"> Chair: Jignesh Patel (University of Wisconsin)</span>
+
+        <span class="keynote-presenter"> Panelists: </span>
+          <span class="keynote-presenter"> Tim Kraska (MIT)</span>
+  <span class="keynote-presenter"> Umar Farooq Minhas (Microsoft Research)</span>
+  <span class="keynote-presenter"> Thomas Neumann (Technische Universität München)</span>
+  <span class="keynote-presenter"> Olga Papaemmanouil (Brandeis University)</span>
+	<span class="keynote-presenter"> Chris Ré (Stanford University)</span>
+  <span class="keynote-presenter"> Michael Stonebraker (MIT)</span>
     </div>
      
 
