--- a/cidr2021/registration.html
+++ b/cidr2021/registration.html
@@ -187,6 +187,7 @@ We recommend recording your talk with Zoom. Please use as your speaker backgroun
 <h3>Registration</h3>
 <p>
 Authors have received registration information by CMT email. General registration is capped to 500 participants. 
+We close registration by Thursday January 7 (23:59 PST) and will email connection details on Friday January 8.
 <p>
 
 			
