--- a/cidr2021/program.html
+++ b/cidr2021/program.html
@@ -251,7 +251,7 @@ Snowflake Data Cloud</a></span>
     </div>
      <h3 class="time-slot" style="grid-row: time-0900;">9:00am PST</h3>
     <div class="session session-9 track-1" style="grid-column: track-1; grid-row: time-0900 / time-1000;">
-        <h3 class="session-title"><a href="gongshow2020/gongshow.html">Breakout Location: Zooms</a></h3>
+        <h3 class="session-title"><a href="#">Breakout Location: Zooms</a></h3>
         <span class="session-location">Location: Zoom</span>
         <span class="session-presenter"> Sponsors</span>
     </div>
@@ -334,8 +334,7 @@ Snowflake Data Cloud</a></span>
         <span class="session-presenter">Stefan Grafberger (TU Munich); Julia Stoyanovich (New York University); Sebastian Schelter (University of Amsterdam)*</span>
         
          <span class="session-time">7:50 - 8:00</span>
-			<span class="session-talk"><a class = "link" href="#">Sponsor Talk</a></span>
-        <span class="session-presenter">Facebook</span>
+			<span class="session-talk"><a class = "link" href="#"> Break</a></span>
     </div>
     <h3 class="time-slot" style="grid-row: time-0800;">8:00am PST</h3>
     <div class="session session-14 track-1" style="grid-column: track-1; grid-row: time-0800 / time-0900;">
@@ -354,11 +353,13 @@ Snowflake Data Cloud</a></span>
         <span class="session-presenter">Raja Appuswamy (Eurecom)*; Vincet Joguin (EUPALIA)</span>
         
          <span class="session-time">8:50 - 9:00</span>
-			<span class="session-talk"><a class = "link" href="papers/p30-alonso-cidr20.pdf">BREAK</a></span>
+			<span class="session-talk"><a class = "link" href="#">Sponsor Talk</a></span>
+			        <span class="session-presenter">Facebook</span>
+
     </div>
     <h3 class="time-slot" style="grid-row: time-0900;">9:00am PST</h3>
     <div class="session session-15 track-1" style="grid-column: track-1; grid-row: time-0900 / time-1000;">
-        <h3 class="session-title"><a href="gongshow2020/gongshow.html">Panel</a></h3>
+        <h3 class="session-title"><a href="#">Panel</a></h3>
         <span class="session-talk"><a class = "link" href="#">ML in Databases</a></span>
             <span class="session-presenter"> Chair: Jignesh Patel (University of Wisconsin)</span>
 
