added twitter embedding

--- a/cidr2021/cfp.html
+++ b/cidr2021/cfp.html
@@ -5,7 +5,7 @@
 <meta name="description" content="Your description goes here" />
 <meta name="keywords" content="your,keywords,goes,here" />
 <meta name="author" content="Your Name" />
-<link rel="stylesheet" type="text/css" href="andreas01.css"
+<link rel="stylesheet" type="text/css" href="andreas02.css"
 	media="screen,projection" />
 <link rel="stylesheet" type="text/css"
 	href="http://www.cidrdb.org/cidr2013/print.css" media="print" />
@@ -98,6 +98,8 @@ CIDR 2013</a></li>
 <li><a href="print.html">Print stylesheet</a></li>
 -->
 	</ul>
+	<a class="twitter-timeline" data-width="130" href="https://twitter.com/cidrdb?ref_src=twsrc%5Etfw">Tweets by cidrdb</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
 
 	<!--
 	<div class="announce">
