--- a/cidr2021/gongshow.html
+++ b/cidr2021/gongshow.html
@@ -5,7 +5,7 @@
 <meta name="description" content="CIDR 2020 Gong Show Schedule" />
 <meta name="keywords" content="CIDR, Databases, Living the Dream" />
 <meta name="author" content="Andy Pavlo" />
-<link rel="stylesheet" type="text/css" href="http://cidrdb.org/cidr2020/andreas01.css" media="screen,projection" />
+<link rel="stylesheet" type="text/css" href="http://cidrdb.org/cidr2020/andreas02.css" media="screen,projection" />
 <link rel="stylesheet" type="text/css" href="http://www.cidrdb.org/cidr2013/print.css" media="print" />
 <title>CIDR 2020 - PROGRAM</title>
 </head>
@@ -44,6 +44,8 @@
 <li><a href="../cidr2003/index.html">CIDR 2003</a></li>
 </ul>
 </li>
+<a class="twitter-timeline" data-width="130" href="https://twitter.com/cidrdb?ref_src=twsrc%5Etfw">Tweets by cidrdb</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
 <!--
 <li><a class="current" href="index2.html">2-column layout A</a></li>
 <li><a href="index3.html">2-column layout B</a></li>
