--- a/cidr2021/registration.html
+++ b/cidr2021/registration.html
@@ -5,7 +5,7 @@
 <meta name="description" content="Your description goes here" />
 <meta name="keywords" content="your,keywords,goes,here" />
 <meta name="author" content="Your Name" />
-<link rel="stylesheet" type="text/css" href="andreas01.css"
+<link rel="stylesheet" type="text/css" href="andreas02.css"
 	media="screen,projection" />
 <link rel="stylesheet" type="text/css"
 	href="http://www.cidrdb.org/cidr2013/print.css" media="print" />
@@ -150,6 +150,8 @@
 						<li><a href="../cidr2005/index.html">CIDR 2005</a></li>
 						<li><a href="../cidr2003/index.html">CIDR 2003</a></li>
 					</ul></li>
+					<a class="twitter-timeline" data-width="130" href="https://twitter.com/cidrdb?ref_src=twsrc%5Etfw">Tweets by cidrdb</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
 				<!--
 			<li><a class="current" href="index2.html">2-column layout A</a></li>
 			<li><a href="index3.html">2-column layout B</a></li>
@@ -188,6 +190,7 @@ We recommend recording your talk with Zoom. Please use as your speaker backgroun
 <p>
 Authors have received registration information by CMT email. General registration is capped to 500 participants. 
 We close registration by Thursday January 7 (23:59 PST) and will email connection details on Friday January 8.
+The organizers can be reached through: <a href="mailto:cidrdb@gmail.com">cidrdb@gmail.com</a>.
 <p>
 
 			
