--- a/cidr2021/index.html
+++ b/cidr2021/index.html
@@ -5,7 +5,7 @@
 	<meta name="description" content="The 11th biennial Conference on Innovative Data Systems Research (CIDR 2021)" />
 	<meta name="keywords" content="CIDR 2021,  Conference on Innovative Data Systems Research" />
 	<meta name="author" content="Jena Bakula" />
-	<link rel="stylesheet" type="text/css" href="andreas01.css" media="screen,projection" />
+	<link rel="stylesheet" type="text/css" href="andreas02.css" media="screen,projection" />
 	<link rel="stylesheet" type="text/css" href="http://www.cidrdb.org/cidr2013/print.css" media="print" />
 	<title>CIDR 2020</title>
 <script language="JavaScript">
@@ -42,6 +42,8 @@ document.write('<img src="' + theImages[whichImage] + '" alt="" width="760" heig
 document.write('</div>');
 
 }
+
+
 
 
 </script>
@@ -99,6 +101,8 @@ document.write('</div>');
 					<li><a href="../cidr2003/index.html">CIDR 2003</a></li>
 				</ul>
 			</li>
+			<a class="twitter-timeline" data-width="130" href="https://twitter.com/cidrdb?ref_src=twsrc%5Etfw">Tweets by cidrdb</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
 <!--
 			<li><a class="current" href="index2.html">2-column layout A</a></li>
 			<li><a href="index3.html">2-column layout B</a></li>
