--- a/cidr2021/org.html
+++ b/cidr2021/org.html
@@ -5,7 +5,7 @@
 	<meta name="description" content="Your description goes here" />
 	<meta name="keywords" content="your,keywords,goes,here" />
 	<meta name="author" content="Your Name" />
-	<link rel="stylesheet" type="text/css" href="andreas01.css" media="screen,projection" />
+	<link rel="stylesheet" type="text/css" href="andreas02.css" media="screen,projection" />
 	<link rel="stylesheet" type="text/css" href="http://www.cidrdb.org/cidr2013/print.css" media="print" />
 	<title>CIDR 2021 - Organization</title>
 </head>
@@ -50,6 +50,8 @@
 				</ul>
 			
 						</li>
+						<a class="twitter-timeline" data-width="130" href="https://twitter.com/cidrdb?ref_src=twsrc%5Etfw">Tweets by cidrdb</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
 <!--
 			<li><a class="current" href="index2.html">2-column layout A</a></li>
 			<li><a href="index3.html">2-column layout B</a></li>
