--- a/cidr2021/officers.html
+++ b/cidr2021/officers.html
@@ -27,9 +27,10 @@
 			<li><a href="officers.html">Officers</a></li>
 			<li><a href="org.html">Organization</a></li>
 			<li><a href="keynotespeakers.html">Keynotes</a></li>
-			<li><a href="program.html">Program</a></li>			
+			<li><a href="program.html">Program</a></li>		
+			<li><a href="keynotespeakers.html">Keynotes</a></li>
+	
 			<li><a href="registration.html">Venue and Registration</a></li>
-<!--			<li><a href="http://www.chaminade.com">Venue Information</a></li>   -->
 			<li><a href="../index.html">Previous Conferences</a>
 				<ul>
 				<li><a href="../cidr2020/index.html">
