--- a/cidr2021/program.html
+++ b/cidr2021/program.html
@@ -33,6 +33,8 @@
 			<li><a href="org.html">Organization</a></li>
 			<li><a href="keynotespeakers.html">Keynotes</a></li>
 			<li><a href="program.html">Program</a></li>
+						<li><a href="keynotespeakers.html">Keynotes</a></li>
+
 			<li><a href="registration.html">Venue and Registration</a></li>
 <!--			<li><a href="http://www.chaminade.com">Venue Information</a></li>   -->
 			<li><a href="../index.html">Previous Conferences</a>
