all sorts of fixes

--- a/cidr2021/officers.html
+++ b/cidr2021/officers.html
@@ -27,9 +27,7 @@
 			<li><a href="officers.html">Officers</a></li>
 			<li><a href="org.html">Organization</a></li>
 			<li><a href="keynotespeakers.html">Keynotes</a></li>
-			<li><a href="program.html">Program</a></li>		
-			<li><a href="keynotespeakers.html">Keynotes</a></li>
-	
+			<li><a href="program.html">Program</a></li>			
 			<li><a href="registration.html">Venue and Registration</a></li>
 			<li><a href="../index.html">Previous Conferences</a>
 				<ul>
@@ -98,8 +96,14 @@
 		<h3>Website Chair</h3>
 		<ul> 
 		<li><b>Ziawasch Abedjan</b>, Leibniz University Hannover</li>
-		<br />
                                  </ul> 
+                                 
+        <h3>Local Arrangement Chair</h3>
+		<ul> 
+		<li><b>Gabor Szarnyas</b>, CWI</li>
+		<br />
+          </ul> 
+
 		
 		
 		<h3>Program Committee</h3>
