--- a/cidr2021/org.html
+++ b/cidr2021/org.html
@@ -28,7 +28,7 @@
 			<li><a href="org.html">Organization</a></li>
 			<li><a href="keynotespeakers.html">Keynotes</a></li>
 			<li><a href="program.html">Program</a></li>	
-		    <li><a href="keynotespeakers.html">Keynotes</a></li>
+		    
 		
 			<li><a href="registration.html">Venue and Registration</a></li>
 			<li><a href="../index.html">Previous Conferences</a>
@@ -82,7 +82,7 @@ For the period 2020-2025, we are grateful that the following sponsors are suppor
 	
 <p>
 <a href="https://www.amazon.com">
-<img  height="130" id="amazon" src="img/amazon.jpg" ></a>
+<img  height="130" id="amazon" src="img/amazon.png" ></a>
 
 <p>
 <a href="https://www.databricks.com">
