--- a/cidr2021/program.html
+++ b/cidr2021/program.html
@@ -209,6 +209,8 @@
      <div class="session session-6 track-1" style="grid-column: track-1; grid-row: time-0900 / time-1000;">
             <h3 class="session-title"><a href="#">Keynote 1</a></h3>
         <span class="session-location">Location: Zoom</span>
+                     <span class="session-presenter">Chair: Jignesh Patel (University of Wisconsin)</span>
+
         <span class="session-time">9:00 - 10:00</span>
 		<span class="session-talk"><a class = "link" href="keynotespeakers.html#tuesday">
 Snowflake Data Cloud</a></span>
@@ -310,6 +312,8 @@ Snowflake Data Cloud</a></span>
     <div class="session session-12 track-1" style="grid-column: track-1; grid-row: time-0900 / time-1000;">
         <h3 class="session-title"><a href="#">Keynote 2</a></h3>
         <span class="session-location">Location: Zoom</span>
+         <span class="session-presenter">Chair: Jignesh Patel (University of Wisconsin)</span>
+
         <span class="session-talk"><a class = "link" href="keynotespeakers.html#thursday">"Let the Data Flow!"</a></span>
         <span class="keynote-presenter"><a class = "link" href="keynotespeakers.html#thursday">Kunle Olukotun, Stanford University</a></span>
     </div>
