fixed youtube link

--- a/cidr2021/program.html
+++ b/cidr2021/program.html
@@ -70,7 +70,7 @@
 	 <h3>CIDR 2021 Program: </h3>
 	 	 The conference will be held on a daily base in the timeslots 07:00-10:00 Pacific Standard Time, which correspond to 10:00-13:00 Eastern Standard Time, 16:00-19:00 Central European Time, 23:00-02:00 China Standard Time.
 	 	 <p>
-	 	 <p>Talk videos will be posted after each conference day on <a href="﻿https://www.youtube.com/channel/UCMSoRpgXRxhiSna6FkhTGeg">YouTube</a>.<p>
+	 	 <p>Talk videos will be posted after each conference day on <a href="https://www.youtube.com/channel/UCMSoRpgXRxhiSna6FkhTGeg">YouTube</a>.<p>
 
 	 <h2 id="schedule-heading">Monday</h2>
 	<div class="schedule" aria-labelledby="schedule-heading">  
