--- a/cidr2021/program.html
+++ b/cidr2021/program.html
@@ -256,7 +256,7 @@ Snowflake Data Cloud</a></span>
     </div>
      <h3 class="time-slot" style="grid-row: time-0900;">9:00am PST</h3>
     <div class="session session-9 track-1" style="grid-column: track-1; grid-row: time-0900 / time-1000;">
-        <h3 class="session-title"><a href="#">Breakout Location: Zooms</a></h3>
+        <h3 class="session-title"><a href="#">Breakout Location: Zoom</a></h3>
         <span class="session-location">Location: Zoom</span>
         <span class="session-presenter"> Sponsors</span>
     </div>
