Remove broken link

--- a/cidr2021/program.html
+++ b/cidr2021/program.html
@@ -318,7 +318,7 @@ Snowflake Data Cloud</a></span>
      <span class="session-presenter"> Chair: Jennie Rogers (Northwestern University)</span>
         <span class="session-location">Location: Zoom</span>
         <span class="session-time">8:00 - 8:10</span>
-		<span class="session-talk"><a class = "link" href="papers/oracle.pdf">Sponsor Talk</a></span>
+		<span class="session-talk"><a class = "link" href="#">Sponsor Talk</a></span>
         <span class="session-presenter">Oracle</span>        
          <span class="session-time">8:10 - 8:25</span>
 		<span class="session-talk"><a class = "link" href="papers/cidr2021_paper22.pdf">Integrity-based Attacks for Encrypted Databases and Implications</a></span>
