--- a/cidr2021/gongshow.html
+++ b/cidr2021/gongshow.html
@@ -5,9 +5,9 @@
 <meta name="description" content="CIDR 2020 Gong Show Schedule" />
 <meta name="keywords" content="CIDR, Databases, Living the Dream" />
 <meta name="author" content="Andy Pavlo" />
-<link rel="stylesheet" type="text/css" href="http://cidrdb.org/cidr2020/andreas02.css" media="screen,projection" />
+<link rel="stylesheet" type="text/css" href="andreas02.css" media="screen,projection" />
 <link rel="stylesheet" type="text/css" href="http://www.cidrdb.org/cidr2013/print.css" media="print" />
-<title>CIDR 2020 - PROGRAM</title>
+<title>CIDR 2021 - PROGRAM</title>
 </head>
 
 <body>
