--- a/cidr2021/gongshow.html
+++ b/cidr2021/gongshow.html
@@ -2,12 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta name="description" content="CIDR 2020 Gong Show Schedule" />
+<meta name="description" content="CIDR 2021 Gong Show Schedule" />
 <meta name="keywords" content="CIDR, Databases, Living the Dream" />
 <meta name="author" content="Andy Pavlo" />
 <link rel="stylesheet" type="text/css" href="andreas02.css" media="screen,projection" />
 <link rel="stylesheet" type="text/css" href="http://www.cidrdb.org/cidr2013/print.css" media="print" />
-<title>CIDR 2021 - PROGRAM</title>
+<title>CIDR 2021 - Gong show</title>
 </head>
 
 <body>
