--- a/cidr2021/program.html
+++ b/cidr2021/program.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="grid.css">
 	<link rel="stylesheet" type="text/css" href="http://www.cidrdb.org/cidr2013/print.css" media="print" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<title>CIDR 2021 - PROGRAM</title>
+	<title>CIDR 2021 - Program</title>
 	<style>
     .link { color: #F0FFF0; } /* CSS link color */
  	</style>
