Add videos for 3rd day

--- a/cidr2021/program.html
+++ b/cidr2021/program.html
@@ -255,15 +255,20 @@ Snowflake Data Cloud</a></span>
         <span class="session-location">Location: Zoom</span>
         <span class="session-time">7:00 - 7:15</span>
 		<span class="session-talk"><a class = "link" href="papers/cidr2021_paper16.pdf">New Directions in Cloud Programming</a></span>
-        <span class="session-presenter">Alvin Cheung (UC Berkeley), Natacha Crooks (UC Berkeley), Joseph M. Hellerstein (UC Berkeley), Matthew Milano (UC Berkeley)</span>
+        <span class="session-presenter">Alvin Cheung (UC Berkeley), Natacha Crooks (UC Berkeley), Joseph M. Hellerstein (UC Berkeley), Matthew Milano (UC Berkeley)<button class = "link" style="color:black"><a href="https://youtu.be/FeRg-7Sr1L8">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+        </span>
         
          <span class="session-time">7:15 - 7:30</span>
 		<span class="session-talk"><a class = "link" href="papers/cidr2021_paper17.pdf">Lakehouse: A New Generation of Open Platforms that Unify Data Warehousing and Advanced Analytics</a></span>
-        <span class="session-presenter">Matei Zaharia (Stanford and Databricks)*; Ali Ghodsi (UC Berkeley and Databricks); Reynold Xin (Databricks); Michael Armbrust (Databricks)</span>
+        <span class="session-presenter">Matei Zaharia (Stanford and Databricks)*; Ali Ghodsi (UC Berkeley and Databricks); Reynold Xin (Databricks); Michael Armbrust (Databricks)
+        <button class = "link" style="color:black"><a href="https://youtu.be/RU2dXoVU8hY">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+        </span>
 
          <span class="session-time">7:30 - 7:45</span>
 		<span class="session-talk"><a class = "link" href="papers/cidr2021_paper18.pdf">Challenges and Opportunities for Autonomous Vehicle Query Systems</a></span>
-        <span class="session-presenter">Fiodar Kazhamiaka (Stanford)*; Matei Zaharia (Stanford and Databricks); Peter D Bailis (Stanford University)</span>
+        <span class="session-presenter">Fiodar Kazhamiaka (Stanford)*; Matei Zaharia (Stanford and Databricks); Peter D Bailis (Stanford University)
+        <button class = "link" style="color:black"><a href="https://youtu.be/E-JHrt73R-4">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+        </span>
         
          <span class="session-time">7:45 - 8:55</span>
 		<span class="session-talk"><a class = "link" href="#">Sponsor Talk</a></span>
