--- a/cidr2021/program.html
+++ b/cidr2021/program.html
@@ -103,7 +103,7 @@
     </div>
      <h3 class="time-slot" style="grid-row: time-0800;">8:00am PST</h3>
     <div class="session session-1 track-1" style="grid-column: track-1; grid-row: time-0800 / time-0900;">
-            <h3 class="session-title"><a href="#">Session 2: Blockchain and transactions</a></h3>
+            <h3 class="session-title"><a href="#">Session 2: Blockchain and Transactions</a></h3>
                         <span class="session-presenter">Chair: Fatma Ozcan (Google)</span>
         <span class="session-location">Location: Zoom</span>
         <span class="session-time">8:00 - 8:15</span>
@@ -319,7 +319,7 @@ Snowflake Data Cloud</a></span>
     </div>
     <h3 class="time-slot" style="grid-row: time-0800;">8:00am PST</h3>
     <div class="session session-11 track-1" style="grid-column: track-1; grid-row: time-0800 / time-0900;">
-     <h3 class="session-title"><a href="#">Session 8 : Privacy and Security</a></h3>
+     <h3 class="session-title"><a href="#">Session 8: Privacy and Security</a></h3>
      <span class="session-presenter"> Chair: Jennie Rogers (Northwestern University)</span>
         <span class="session-location">Location: Zoom</span>
         <span class="session-time">8:00 - 8:10</span>
@@ -353,7 +353,7 @@ Snowflake Data Cloud</a></span>
 	<h3 class="time-slot" style="grid-row: time-0700;">7:00am PST</h3>
      <div class="session session-13 track-1" style="grid-column: track-1; grid-row: time-0700 / time-0800;">
 
-     <h3 class="session-title"><a href="#">Session 9 : Platforms for Machine Learning</a></h3>
+     <h3 class="session-title"><a href="#">Session 9: Platforms for Machine Learning</a></h3>
      <span class="session-presenter">Chair: Matthias Boehm (TU Graz)</span>
         <span class="session-location">Location: Zoom</span>
         <span class="session-time">7:00 - 7:15</span>
