--- a/cidr2021/keynotespeakers.html
+++ b/cidr2021/keynotespeakers.html
@@ -129,7 +129,7 @@ width=127 height=127 id="Picture 1"
 src="Keynote_speakers_content.fld/image002.jpg"></span></p>
 
 <p class=MsoNormal><span style='font-size:16.0pt;line-height:115%'>Kunle
-Olukotun, Stanford University</span></p>
+Olukotun, Stanford University and SambaNova Systems</span></p>
 
 <p class=MsoNormal><span style='font-size:11.5pt;line-height:115%;color:#333333'>&nbsp;</span></p>
 
