--- a/cidr2021/program.html
+++ b/cidr2021/program.html
@@ -353,7 +353,7 @@ Snowflake Data Cloud</a></span>
          <span class="session-presenter">Chair: Jignesh Patel (University of Wisconsin)</span>
 
         <span class="session-talk"><a class = "link" href="keynotespeakers.html#thursday">"Let the Data Flow!"</a></span>
-        <span class="keynote-presenter"><a class = "link" href="keynotespeakers.html#thursday">Kunle Olukotun, Stanford University</a></span>
+        <span class="keynote-presenter"><a class = "link" href="keynotespeakers.html#thursday">Kunle Olukotun, Stanford University and SambaNova Systems</a></span>
     </div>
  </div>
  
