--- a/cidr2021/program.html
+++ b/cidr2021/program.html
@@ -308,19 +308,19 @@ Snowflake Data Cloud</a></span>
         <span class="session-time">7:00 - 7:15</span>
 		<span class="session-talk"><a class = "link" href="papers/cidr2021_paper19.pdf">The Case for Distance-Bounded Spatial Approximations</a></span>
         <span class="session-presenter">Eleni Tzirita Zacharatou (TU Berlin)*; Andreas Kipf (MIT); Ibrahim Sabek (MIT); Varun Pandey (Technical University of Munich); Harish Doraiswamy (New York University); Volker Markl (Technische Universität Berlin)
-        <button class = "link" style="color:black"><a href="">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+        <button class = "link" style="color:black"><a href="https://www.youtube.com/watch?v=3b-TSSKPGh0">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
         </span>
         
          <span class="session-time">7:15 - 7:30</span>
 		<span class="session-talk"><a class = "link" href="papers/cidr2021_paper20.pdf">Hist-Tree: Those Who Ignore It Are Doomed to Learn</a></span>
         <span class="session-presenter">Andrew Crotty (Brown University)*
-        <button class = "link" style="color:black"><a href="">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+        <button class = "link" style="color:black"><a href="https://www.youtube.com/watch?v=ruELVKr54yI">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
         </span>
 
          <span class="session-time">7:30 - 7:45</span>
          <span class="session-talk"><a class = "link" href="papers/cidr2021_paper06.pdf">Everything is a Transaction: Unifying Logical Concurrency Control and Physical Data Structure Maintenance in Database Management Systems</a></span>
         <span class="session-presenter">Ling Zhang (CMU)*; Matthew Butrovich (CMU); Tianyu Li (Massachusetts Institute of Technology); Andrew Pavlo (CMU); Yash Nannapaneni (Rockset); John Rollinson (Army Cyber Institute); Huanchen Zhang (CMU); Ambarish Balakumar (CMU); Daniel Biales (CMU); Ziqi Dong (CMU); Emmanuel J Eppinger (CMU); Jordi E Gonzalez (CMU); Wan Shen Lim (CMU); Jianqiao Liu (CMU); Lin Ma (CMU); Prashanth Menon (Carnegie Mellon Universiy); Soumil Mukherjee (CMU); Tanuj Nayak (CMU); Amadou Ngom (CMU); Dong Niu (CMU); Deepayan Patra (CMU); Poojita Raj (CMU); Stephanie Wang (CMU); Wuwen Wang (CMU); Yao Yu (CMU); William Zhang (CMU)
-        <button class = "link" style="color:black"><a href="">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+        <button class = "link" style="color:black"><a href="https://www.youtube.com/watch?v=vZX4f9rT694">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
         </span>
 
          <span class="session-time">7:45 - 7:55</span>
@@ -337,15 +337,21 @@ Snowflake Data Cloud</a></span>
         <span class="session-presenter">Oracle</span>        
          <span class="session-time">8:10 - 8:25</span>
 		<span class="session-talk"><a class = "link" href="papers/cidr2021_paper22.pdf">Integrity-based Attacks for Encrypted Databases and Implications</a></span>
-        <span class="session-presenter">Arvind Arasu (Microsoft); Raghav Kaushik (Microsoft); Donald Kossmann (Microsoft Research); Ravi Ramamurthy (Microsoft)*</span>
+        <span class="session-presenter">Arvind Arasu (Microsoft); Raghav Kaushik (Microsoft); Donald Kossmann (Microsoft Research); Ravi Ramamurthy (Microsoft)*
+        <button class = "link" style="color:black"><a href="https://www.youtube.com/watch?v=IN08vAIkmP8">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+        </span>
 
          <span class="session-time">8:25 - 8:40</span>
 		<span class="session-talk"><a class = "link" href="papers/cidr2021_paper23.pdf">Encrypted Databases: From Theory to Systems</a></span>
-        <span class="session-presenter">Zheguang Zhao (Brown University)*; Seny Kamara (Brown University); Tarik Moataz (Aroki Systems); Stan Zdonik (Brown University)</span>
-        
+        <span class="session-presenter">Zheguang Zhao (Brown University)*; Seny Kamara (Brown University); Tarik Moataz (Aroki Systems); Stan Zdonik (Brown University)
+        <button class = "link" style="color:black"><a href="https://www.youtube.com/watch?v=obAnp1H_3Cg">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+        </span>
+
          <span class="session-time">8:40 - 8:55</span>
 			<span class="session-talk"><a class = "link" href="papers/cidr2021_paper24.pdf">Sypse: Privacy-first Data Management through Pseudonymization and Partitioning</a></span>
-        <span class="session-presenter">Amol Deshpande (University of Maryland at College Park)*</span>
+        <span class="session-presenter">Amol Deshpande (University of Maryland at College Park)*
+        <button class = "link" style="color:black"><a href="https://www.youtube.com/watch?v=Sag0kNj5Dho">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+        </span>
     </div>
     <h3 class="time-slot" style="grid-row: time-0900;">9:00am PST</h3>
     <div class="session session-12 track-1" style="grid-column: track-1; grid-row: time-0900 / time-1000;">
