Add second keynote

--- a/cidr2021/program.html
+++ b/cidr2021/program.html
@@ -361,7 +361,7 @@ Snowflake Data Cloud</a></span>
 
         <span class="session-talk"><a class = "link" href="keynotespeakers.html#thursday">"Let the Data Flow!"</a></span>
         <span class="keynote-presenter"><a class = "link" href="keynotespeakers.html#thursday">Kunle Olukotun, Stanford University and SambaNova Systems</a>
-        <button class = "link" style="color:black"><a href="">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
+        <button class = "link" style="color:black"><a href="https://www.youtube.com/watch?v=iHhHHBuk3W4">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button>
         </span>
     </div>
  </div>
