--- a/cidr2021/keynotespeakers.html
+++ b/cidr2021/keynotespeakers.html
@@ -77,6 +77,9 @@ id="Picture 2" src="Keynote_speakers_content.fld/image001.jpg"></span></p>
 
 <p class=MsoNormal><span style='font-size:16.0pt;line-height:115%'>Benoit Dageville, Snowflake Co-Founder &amp; President of
 Products</span></p>
+
+<p class=MsoNormal></p><button class = "link" style="color:black"><a href="https://www.youtube.com/watch?v=0K7h7WvC6D4">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button></p>
+
 <p class=MsoNormal><span style='font-size:11.5pt;line-height:115%;color:#333333'>&nbsp;</span></p>
 
 
@@ -130,6 +133,8 @@ src="Keynote_speakers_content.fld/image002.jpg"></span></p>
 
 <p class=MsoNormal><span style='font-size:16.0pt;line-height:115%'>Kunle
 Olukotun, Stanford University and SambaNova Systems</span></p>
+
+<p class=MsoNormal><button class = "link" style="color:black"><a href="https://www.youtube.com/watch?v=iHhHHBuk3W4">Talk <i class="fa fa-youtube-play" style="font-size:1.2em;color:red"></i></a></button></p>
 
 <p class=MsoNormal><span style='font-size:11.5pt;line-height:115%;color:#333333'>&nbsp;</span></p>
 
