Add font-awesome to keynotes page

--- a/cidr2021/keynotespeakers.html
+++ b/cidr2021/keynotespeakers.html
@@ -7,6 +7,7 @@
 	<meta name="author" content="Your Name" />
 	<link rel="stylesheet" type="text/css" href="andreas02.css" media="screen,projection" />
 	<link rel="stylesheet" type="text/css" href="http://www.cidrdb.org/cidr2013/print.css" media="print" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<title>CIDR 2021 - Keynotes</title>
 </head>
 
