--- a/cidr2021/gongshow.html
+++ b/cidr2021/gongshow.html
@@ -98,8 +98,8 @@
 </tr>
 	
 <tr>
-    <td class="paper-url"><a href="papers/cidr2021_abstract02.pdf" title="Towards Cost-Optimal Query Processing in the Cloud"><img src="img/gongshow/cidr2021_abstract02.png" /></a></td>
-    <td class="paper-info"><b><a href="papers/cidr2021_abstract02.pdf">Towards Cost-Optimal Query Processing in the Cloud</a></b><BR/>Maximilian Kuschewski (Uni Augsburg, LMU, TUM); Viktor Leis (Friedrich Schiller University Jena)*</td>
+    <td class="paper-url"><a href="papers/cidr2021_abstract02.pdf" title="White-Box OLAP Performance Modeling for the Cloud"><img src="img/gongshow/cidr2021_abstract02.png" /></a></td>
+    <td class="paper-info"><b><a href="papers/cidr2021_abstract02.pdf">White-Box OLAP Performance Modeling for the Cloud</a></b><BR/>Maximilian Kuschewski (Uni Augsburg, LMU, TUM); Viktor Leis (Friedrich Schiller University Jena)*</td>
 </tr>
 
 <tr>
