--- a/cidr2022/officers.html
+++ b/cidr2022/officers.html
@@ -142,7 +142,7 @@
 <li><b>Julia Stoyanovich</b>, New York University</li>
 <li><b>Nesime Tatbul</b>, Intel Labs and MIT</li>
 <li><b>Jens Teubner</b>, TU Dortmund University</li>
-<li><b>Yuanyuan Tian</b>, IBM Almadan</li>
+<li><b>Yuanyuan Tian</b>, Microsoft Gray Systems Lab</li>
 <li><b>Peter Triantafillou</b>, University of Warwick</li>
 <li><b>Kai Zeng</b>, Alibaba, China</li>
                                   
